--- a/mssql-restapi-nodejs/package.json
+++ b/mssql-restapi-nodejs/package.json
@@ -4,11 +4,18 @@
   "description": "Exemplo Node.js com MSSQL Server",
   "main": "index.js",
   "scripts": {
-    "test": "echo \\\"Error: no test specified\\\" && exit 1"
+    "dev": "webpack --mode development",
+    "build": "webpack --mode development",
+    "start": "webpack-dev-server --mode production --open"
   },
   "author": "Jean Carlo Alves Ferreira",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "mssql": "^5.0.0"
+  },
+  "devDependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "mssql": "^5.0.0"
