--- a/docker-web-mongo/package.json
+++ b/docker-web-mongo/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.2",
-    "mongoose": "^5.0.3",
-    "nodemon": "^1.14.12"
+    "express": "^4.16.4",
+    "mongoose": "^5.4.19"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.10"
   }
 }
