--- a/docker-web-nodejs/Dockerfile
+++ b/docker-web-nodejs/Dockerfile
@@ -10,7 +10,8 @@ RUN npm install --quiet --production --no-progress --registry=${registry:-https:
     npm cache clean --force && \
 	npm install --save-dev webpack && \
     npm install --save-dev nodemon && \
-    npm install express --save    
+    npm install express --save && \
+	npm install mssql --save
 
 COPY . .
 
